place_header & link fixed, also cover stretch

--- a/blocks/place/__url-link/place__url-link.css
+++ b/blocks/place/__url-link/place__url-link.css
@@ -1,6 +1,7 @@
 .place__url-link {
-    font-size: 1.125rem;
-    line-height: 1.875rem;
-    letter-spacing: normal;
-    color: #FFFFFF;
+  font-size: 18px;
+  line-height: 1.22;
+  color: #FFFFFF;
+  text-decoration: underline;
+  grid-area: url-link;
 }
