--- a/blocks/place/__url/place__url.css
+++ b/blocks/place/__url/place__url.css
@@ -1,13 +1,6 @@
 .place__url {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    grid-area: url;
-    margin-bottom: 60px;
-}
-
-@media screen and (min-width: 521) and (max-width: 1024px) {
-    .place__url {
-        margin-bottom: 45px;
-    }
+  grid-area: url;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
